# scim2-filter-parser

./: .coveragerc  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.rst  MANIFEST.in  README.rst  TODO.rst  pyproject.toml  pytest.ini  setup.py  speed_test.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cicd.yml
docs/: Makefile  ast.rst  attr_paths.rst  conf.py  index.rst  lexer.rst  parser.rst  requirements.txt
docs/queries/: sql.rst
docs/transpilers/: sql.rst
requirements/: docs.txt
src/scim2_filter_parser/: ast.py  attr_paths.py  lexer.py  parser.py  query.py  transpiler.py
src/scim2_filter_parser/queries/: django.py  sql.py
src/scim2_filter_parser/transpilers/: django.py  django_q_object.py  sql.py
src/scim2filter/: lexer.py
tests/: test_attr_paths.py  test_lexer.py  test_parser.py  test_query.py  test_query_django.py  test_query_sql.py  test_transpiler.py  test_transpiler_django.py  test_transpiler_sql.py
