[project]
name = "scim2-filter-parser"
version = "0.3.5"
description = "A customizable parser/transpiler for SCIM2.0 filters"
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/15five/scim2-filter-parser"
repository = "https://github.com/15five/scim2-filter-parser"
keywords = [
    "scim",
    "2.0",
    "filter"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "scim2_filter_parser", from = "src"},
]
authors = [
    "Paul Logston <paul@15five.com>",
]
maintainers = [
    "Paul Logston <paul.logston@gmail.com>",
]

[dependencies]
sly = "^0.4"

django = { version = ">=2.2.7", optional = true }

[dev-dependencies]
pytest-runner = "^5.2"
pytest = "^6.1.1"

[extras]
django = ["django"]

[scripts]
sfp-lexer= 'scim2_filter_parser.lexer:main'
sfp-parser = 'scim2_filter_parser.parser:main'
sfp-transpiler = 'scim2_filter_parser.transpilers.sql:main'
sfp-query = 'scim2_filter_parser.queries.sql:main'

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
