[tool.poetry]
name = "scim2-filter-parser"
version = "0.5.0"
description = "A customizable parser/transpiler for SCIM2.0 filters."
license = "MIT"
authors = ["Paul Logston <paul@15five.com>"]
maintainers = ["Paul Logston <paul.logston@gmail.com>"]
readme = "README.rst"
homepage = "https://pypi.org/project/scim2-filter-parser/"
repository = "https://github.com/15five/scim2-filter-parser"
documentation = "https://scim2-filter-parser.readthedocs.io/en/stable/"
keywords = ["scim", "scim2", "2.0", "filter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "scim2_filter_parser", from = "src" },
]

[tool.poetry.scripts]
sfp-lexer = 'scim2_filter_parser.lexer:main'
sfp-parser = 'scim2_filter_parser.parser:main'
sfp-transpiler = 'scim2_filter_parser.transpilers.sql:main'
sfp-query = 'scim2_filter_parser.queries.sql:main'

[tool.poetry.dependencies]
python = ">=3.8"
sly = "==0.5"

django = { version = ">=3.2", optional = true }

[tool.poetry.extras]
django-query = ['django']

[tool.poetry.dev-dependencies]
mock = "^4.0.2"
tox = "^3.16.1"
flake8 = "^3.8.3"
toml = "^0.10.1"
flake8-isort = "^3.0.0"
pytest = ">=5.4.0"
coverage = "^6.4.2"
pytest-cov = "3.0.0"

[tool.black]
line-length = 100
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
